[package]
name = "rust-ideb-epiphyte"
version = "0.1.0"
edition = "2024"

[dependencies]
dll-syringe = { version = "0.16.0", features = ["into-x86-from-x64"] }
minhook = "0.7.1"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

[[bin]]
name = "injector"
path = "src/main.rs"

[lib]
name = "epiphyte"
path = "src/lib.rs"
crate-type = ["cdylib"]
