[package]
name = "rust-ideb-epiphyte"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dll-syringe = { version = "0.16.0", features = ["into-x86-from-x64"] }
minhook = "0.7.1"
tokio = { version = "1.45.1", features = ["full"] }
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
] }

[[bin]]
name = "injector"
path = "src/main.rs"

[lib]
name = "epiphyte"
path = "src/lib.rs"
crate-type = ["cdylib"]
